2009-04-24  Murray Cumming  <murrayc@murrayc.com>

	Correct the Animations and Behaviours updates.
	 
	* docs/tutorial/clutter-tut.xml: Animations: Make it clear that apps 
	never need to use anything but the clutter_actor_animate() convenience 
	functions. Move the ClutterAlpha description here, from the Behaviours 
	chapter, because this is now the first mention. Remove mention of 
	removed standard ClutterAlpha callbacks.

2009-04-21  Murray Cumming  <murrayc@murrayc.com>

	docs/tutorial/clutter-tut.xml: Improved the text of the recent additions.

2009-04-21  Johannes Schmid <jschmid@openismus.com>
  
  * docs/tutorial/clutter-tut.xml: Added section about timeline markers
  and Gtk+ integration (#935)
  * examples/timeline/main.c: Added example for timeline markers

2009-04-20  Johannes Schmid <jschmid@openismus.com>

	* docs/tutorial/clutter-tut.xml: Fixed section about effects to
	use animation API 

2009-04-16  Johannes Schmid <jschmid@openismus.com>

	* examples/effects => examples/animation:
	Ported effects example to new animation API
	* examples/*: Fixed little API problems with clutter 0.9, espeicially
	moving from clutter_label_* to clutter_text_*

2008-12-15  Daniel Elstner  <danielk@openismus.com>

	* examples/behaviour/main.c: Follow API changes of clutter 0.9.
	* examples/custom_actor/triangle_actor.[ch]: ditto,
	* examples/custom_container/examplebox.[ch]: ditto,
	* examples/entry/main.c: ditto,
	* examples/full_example/main.c: ditto,
	* examples/multiline_text_entry/multiline_entry.[ch]: ditto,
	* examples/scrolling/scrollingcontainer.[ch]: ditto,
	* examples/stage_widget/main.c: ditto.

2008-12-15  Daniel Elstner  <danielk@openismus.com>

	* docs/tutorial/clutter-tut.xml: Remove references to
	BehaviourBspline, as its functionality was merged into
	BehaviourPath.

2008-12-15  Daniel Elstner  <danielk@openismus.com>

	* docs/tutorial/README: Fix copy'n'paste mistakes.

2008-12-15  Daniel Elstner  <danielk@openismus.com>
